@@ -1,5 +1,5 @@
 #
-# $Id: Makefile.am,v 1.52 2008-08-07 00:29:08 yangtse Exp $
+# $Id: Makefile.am,v 1.53 2009-11-05 15:04:04 yangtse Exp $
 #
 
 AUTOMAKE_OPTIONS = foreign nostdinc
@@ -12,10 +12,12 @@ EXTRA_DIST = README Makefile.example Makefile.inc Makefile.m32 \
 # being currently built and tested are searched before the library which
 # might possibly already be installed in the system.
 #
-# $(top_builddir)/include is for libcurl's generated curl/curlbuild.h file
+# $(top_builddir)/include/curl for generated curlbuild.h included from curl.h
+# $(top_builddir)/include for generated curlbuild.h included from lib/setup.h
 # $(top_srcdir)/include is for libcurl's external include files
 
-INCLUDES = -I$(top_builddir)/include \
+INCLUDES = -I$(top_builddir)/include/curl \
+           -I$(top_builddir)/include      \
            -I$(top_srcdir)/include
 
 LIBDIR = $(top_builddir)/lib
