@@ -14,6 +14,7 @@ This release includes the following changes:
 This release includes the following bugfixes:
 
  o progress meter percentage and transfer time estimates fixes
+ o portability enhancement for OS's without orthogonal directory tree structure
 
 This release includes the following known bugs:
 
